# gtest_cmake_template

./: CMakeLists.txt  README.md
demo/: README.md
demo/jp/: CMakeLists.txt.jp
demo/sample01/: CMakeLists.txt  README.md
demo/sample01/include/: dollar.h
demo/sample01/src/: dollar.cpp
demo/sample01/test/: dollar_unittest.cpp
src/: main.cpp
test/: add_unittest.cpp
